[project]
name = "interview-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.107.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "openai-agents>=0.17.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
